button changes between night/day

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
     <canvas class="webgl"></canvas>
   </body>
 
-  <div class="day-night-button"></div>
+  <div class="day-night-button"><i class="icon"></i></div>
 </html>
