html: add name and icons

--- a/src/index.html
+++ b/src/index.html
@@ -9,4 +9,20 @@
   </body>
 
   <div class="day-night-button"><i class="icon"></i></div>
+
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+        <div class="name">Patrik Barkman</div>
+        <div class="link-icons">
+          <a href="https://github.com/barkm">
+            <i class="fab fa-github link-icon"></i>
+          </a>
+          <a href="https://se.linkedin.com/in/patrik-barkman">
+            <i class="fab fa-linkedin-in link-icon"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </html>
