update linkedin url

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             ></i>
           </a>
           <a
-            href="https://se.linkedin.com/in/patrik-barkman"
+            href="https://www.linkedin.com/in/patrik-barkman"
             ,
             onclick="event.stopPropagation()"
           >
